--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,7 +1,7 @@
 <div class="mt-3 ">
   <h1>New Dose</h1>
   <%= simple_form_for [@cocktail, @dose] do |f| %>
-      <%= f.association :ingredient, collection: Ingredient.all, prompt: 'Pick an ingredient' %>
+      <%= f.association :ingredient, collection: Ingredient.all.order(:name), prompt: 'Pick an ingredient' %>
       <%= f.input :description %>
       <%= f.button :submit, class: "btn-primary rounded" %>
   <% end %>
